Added projects to carousel

--- a/index.html
+++ b/index.html
@@ -47,12 +47,34 @@
                                 <div class="project-text-container">
                                     <h4>TradeNote: Candlestick Charts with Entry/Exit Notations</h4>
                                     <h5><i>Feb. 2024 - Mar. 2024</i></h5>
-                                    <ul>
-                                        <li>Collaborated with a team of 5 developers to create a web application that allows users to track their stock trades and analyze their performance.</li>
-                                        <li>Developed the front-end using HTML, CSS, and JavaScript, and the back-end using PHP and MySQL.</li>
-                                        <li>Implemented user authentication and authorization using PHP sessions and MySQL databases.</li>
-                                        <li>Designed and implemented the database schema to store user data and trade information.</li>
-                                    </ul>
+                                    <p>Contributed a major feature to the open-source project TradeNote on GitHub - candlestick charts with notations for entries and exits. This feature significantly improved data visualization and technical analysis capabilities for users.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <div class="project-slide-content">
+                                <div class="project-text-container">
+                                    <h4>Data Conversion Application | East Texas Professional Credit Union</h4>
+                                    <h5><i>Nov. 2022 - Feb. 2023</i></h5>
+                                    <p>I was tasked with developing a method for converting raw data files into a defined format to be received by one of our partners. I constructed a robust application that would be able to detect errors in the raw data, allow the user to easily repair the errors and format the data. The application was also built to be easily updated if the format changes in the future.<br>
+                                        <br>
+                                        In this project I had the opportunity to learn and utilize Java Swing. The finished application has received positive feedback.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <div class="project-slide-content">
+                                <div class="project-image-container">
+                                    <img src="images/BookYourBook.jpg" alt="TradeNote">
+                                </div>
+                                <div class="project-text-container">
+                                    <h4>Book Your Book: Simulated Bookstore Web App</h4>
+                                    <h5><i>Sep. 2021 - Dec. 2021</i></h5>
+                                    <p>Our team was tasked with creating an application that would allow users to view and simulate ordering from a selection of books stored in a relational database. The application also provides some information about the books such as its publisher, author, genres, etc. All book and user data is editable by site administrators.<br>
+                                        <br>
+                                        For this project our team decided to learn and utilize PHP to create a web application.<br>
+                                        <br>
+                                        The source code can be found in my GitHub repository <a href="https://github.com/cainfe/book-your-book" target="_blank">here</a>.</p>
                                 </div>
                             </div>
                         </div>
