--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                             </div>
                         </div>
                     </div>
-                    <a class="prev" onclick="changeSlide('project-carousel', -1)">&#10094;</a>
-                    <a class="next" onclick="changeSlide('project-carousel', 1)">&#10095;</a>
+                    <a class="carousel-prev" onclick="changeSlide('project-carousel', -1)">&#10094;</a>
+                    <a class="carousel-next" onclick="changeSlide('project-carousel', 1)">&#10095;</a>
                     <div class="slide-counter"></div>
                 </div>
             </fieldset>
