Added link to TradeNote

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                 <div class="project-text-container">
                                     <h4>TradeNote: Candlestick Charts with Entry/Exit Notations</h4>
                                     <h5><i>Feb. 2024 - Mar. 2024</i></h5>
-                                    <p>Contributed a major feature to the open-source project TradeNote on GitHub - candlestick charts with notations for entries and exits. This feature significantly improved data visualization and technical analysis capabilities for users.</p>
+                                    <p>Contributed a major feature to the open-source project <a href="https://github.com/Eleven-Trading/TradeNote" target="_blank">TradeNote</a> on GitHub - candlestick charts with notations for entries and exits. This feature significantly improved data visualization and technical analysis capabilities for users.</p>
                                 </div>
                                 <div class="project-image-container">
                                     <img src="images/tradenote.png" alt="TradeNote: Candlestick Charts" class="zoomable-img">
