Added to and formatted contact section

--- a/index.html
+++ b/index.html
@@ -27,11 +27,20 @@
             </fieldset>
             <fieldset id="section-contact" class="section-container half-width">
                 <legend class="section-title">Contact</legend>
-                <div>
-                    <a href="https://www.linkedin.com/in/floydcain/" target="_blank"><span class="iconify"
+                <div class="contact-content">
+                    <div class="contact-summary">
+                        <img src="images/portrait.jpg" alt="Portrait of Floyd" class="contact-image">
+                        <p>I'm always interested in hearing about new projects, challenges, or opportunities to collaborate.</p>
+                    </div>
+
+                    <div class="contact-links">
+                        <a href="https://www.linkedin.com/in/floydcain/" target="_blank" title="LinkedIn"><span class="iconify contact-icon"
                             data-icon="simple-icons:linkedin"></span></a>
-                    <a href="https://github.com/cainfe" target="_blank"><span class="iconify"
-                            data-icon="simple-icons:github"></span></a>
+                        <a href="https://github.com/cainfe" target="_blank" title="GitHub"><span class="iconify contact-icon"
+                                data-icon="simple-icons:github"></span></a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLScKVz11zDHcR_a8XtnM6zcI9g1yPvl2imCh2n63swIsA33swg/viewform?usp=sf_link" target="_blank" title="Contact Form"><span class="iconify contact-icon"
+                                data-icon="uiw:mail"></span></a>
+                    </div>
                 </div>
             </fieldset>
 
