Renamed contact section
Renamed contact section to connect

--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
                 </div>
             </fieldset>
             <fieldset id="section-contact" class="section-container half-width">
-                <legend class="section-title">Contact</legend>
-                <div class="contact-content">
-                    <div class="contact-summary">
-                        <img src="images/portrait.jpg" alt="Portrait of Floyd" class="contact-image">
+                <legend class="section-title">Connect</legend>
+                <div class="connect-content">
+                    <div class="connect-summary">
+                        <img src="images/portrait.jpg" alt="Portrait of Floyd" class="connect-image">
                         <p>I'm always interested in hearing about new projects, challenges, or opportunities to collaborate.</p>
                     </div>
 
-                    <div class="contact-links">
-                        <a href="https://www.linkedin.com/in/floydcain/" target="_blank" title="LinkedIn"><span class="iconify contact-icon"
+                    <div class="connect-links">
+                        <a href="https://www.linkedin.com/in/floydcain/" target="_blank" title="LinkedIn"><span class="iconify connect-icon"
                             data-icon="simple-icons:linkedin"></span></a>
-                        <a href="https://github.com/cainfe" target="_blank" title="GitHub"><span class="iconify contact-icon"
+                        <a href="https://github.com/cainfe" target="_blank" title="GitHub"><span class="iconify connect-icon"
                                 data-icon="simple-icons:github"></span></a>
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLScKVz11zDHcR_a8XtnM6zcI9g1yPvl2imCh2n63swIsA33swg/viewform?usp=sf_link" target="_blank" title="Contact Form"><span class="iconify contact-icon"
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLScKVz11zDHcR_a8XtnM6zcI9g1yPvl2imCh2n63swIsA33swg/viewform?usp=sf_link" target="_blank" title="Contact Form"><span class="iconify connect-icon"
                                 data-icon="uiw:mail"></span></a>
                     </div>
                 </div>
