renamed contact to connect pt 2

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     I'm always eager to connect with fellow developers and explore new challenges. Feel free to reach out if you have any interesting projects or opportunities.</p>
                 </div>
             </fieldset>
-            <fieldset id="section-contact" class="section-container half-width">
+            <fieldset id="section-connect" class="section-container half-width">
                 <legend class="section-title">Connect</legend>
                 <div class="connect-content">
                     <div class="connect-summary">
