Added certifications section

--- a/index.html
+++ b/index.html
@@ -196,7 +196,19 @@
                 </div>
             </fieldset>
             <fieldset id="section-awards" class="section-container half-width">
-                <legend class="section-title">Awards & Achievements</legend>
+                <legend class="section-title">Awards & Certifications</legend>
+                <div id="certifications-carousel" class="carousel">
+                    <div class="slides">
+                        <div class="slide">
+                            <h4>Oracle Certified Associate, Java SE 8 Programmer | Oracle</h4>
+                            <h5><i>Issued May 2024</i></h5>
+                            <a href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=FAC6EFC67FD2FF57629F21E1AEDF6B072C32C4E27CA85638FEAC302210B70F71" target="_blank"><img src="images/OCAJSE8.jpg" alt="Oracle Certified Associate, Java SE 8 Programmer" title="Oracle Certified Associate, Java SE 8 Programmer"  id="ocajse8-badge" class=""></a>
+                        </div>
+                    </div>
+                    <a class="carousel-prev" onclick="changeSlide('certifications-carousel', -1)">&#10094;</a>
+                    <a class="carousel-next" onclick="changeSlide('certifications-carousel', 1)">&#10095;</a>
+                    <div class="slide-counter"></div>
+                </div>
             </fieldset>
         </div>
     </main>
