Added to education section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         reach out if you have any interesting projects or opportunities.</p>
                 </div>
             </fieldset>
-            
+
             <fieldset id="section-connect" class="section-container half-width">
                 <legend class="section-title">Connect</legend>
                 <div class="connect-content">
@@ -244,6 +244,10 @@
                         <div class="slide">
                             <h4>Bachelor of Science in Computer Science | Stephen F. Austin State University</h4>
                             <h5><i>Aug. 2018 - May 2022</i></h5>
+                            <ul>
+                                <li>Proficient in Java programming language, with experience building applications in group and solo settings. Gained additional exposure to Python, Visual Basic, HTML and more.</li>
+                                <li>Named to Dean's List for outstanding academic achievement in Spring 2019 and Spring 2020</li>
+                            </ul>
                         </div>
                     </div>
                     <a class="carousel-prev" onclick="changeSlide('education-carousel', -1)">&#10094;</a>
