Updated header format

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                         <div class="slide">
                             <div class="project-slide-content">
                                 <div class="project-text-container">
-                                    <h4>TradeNote: Candlestick Charts with Entry/Exit Notations</h4>
-                                    <h5><i>Feb. 2024 - Mar. 2024</i></h5>
+                                    <h3>TradeNote: Candlestick Charts with Entry/Exit Notations</h3>
+                                    <h6><i>Feb. 2024 - Mar. 2024</i></h6>
                                     <p>Contributed a major feature to the open-source project <a
                                             href="https://github.com/Eleven-Trading/TradeNote"
                                             target="_blank">TradeNote</a> on GitHub - candlestick charts with notations
@@ -78,8 +78,8 @@
                         <div class="slide">
                             <div class="project-slide-content">
                                 <div class="project-text-container">
-                                    <h4>Data Conversion Application | East Texas Professional Credit Union</h4>
-                                    <h5><i>Nov. 2022 - Feb. 2023</i></h5>
+                                    <h3>Data Conversion Application | East Texas Professional Credit Union</h3>
+                                    <h6><i>Nov. 2022 - Feb. 2023</i></h6>
                                     <p>I was tasked with developing a method for converting raw data files into a
                                         defined format to be received by one of our partners. I constructed a robust
                                         application that would be able to detect errors in the raw data, allow the user
@@ -95,8 +95,8 @@
                         <div class="slide">
                             <div class="project-slide-content">
                                 <div class="project-text-container">
-                                    <h4>Book Your Book: Simulated Bookstore Web App</h4>
-                                    <h5><i>Sep. 2021 - Dec. 2021</i></h5>
+                                    <h3>Book Your Book: Simulated Bookstore Web App</h3>
+                                    <h6><i>Sep. 2021 - Dec. 2021</i></h6>
                                     <p>Our team was tasked with creating an application that would allow users to view
                                         and simulate ordering from a selection of books stored in a relational database.
                                         The application also provides some information about the books such as its
@@ -188,8 +188,9 @@
                 <div id="experience-carousel" class="carousel">
                     <div class="slides">
                         <div class="slide">
-                            <h4>Junior Systems Administrator | East Texas Professional Credit Union</h4>
-                            <h5><i>Jan. 2024 - Present</i></h5>
+                            <h3>Junior Systems Administrator</h3>
+                            <h4>East Texas Professional Credit Union</h4>
+                            <h6><i>Jan. 2024 - Present</i></h6>
                             <ul>
                                 <li>Identified critical security gap, led password security initiative, reducing
                                     password reset/lockout tickets by 20% through successful implementation of a new
@@ -204,8 +205,9 @@
                             </ul>
                         </div>
                         <div Class="slide">
-                            <h4>IT Service Specialist II | East Texas Professional Credit Union</h4>
-                            <h5><i>Sept. 2022 - Jan. 2024</i></h5>
+                            <h3>IT Service Specialist II</h3>
+                            <h4>East Texas Professional Credit Union</h4>
+                            <h6><i>Sept. 2022 - Jan. 2024</i></h6>
                             <ul>
                                 <li>Coordinated with staff and management to collaborate on projects and resolve over
                                     100 technical issues per month.</li>
@@ -219,8 +221,9 @@
                             </ul>
                         </div>
                         <div Class="slide">
-                            <h4>Teller II | East Texas Professional Credit Union</h4>
-                            <h5><i>June 2018 - Sept. 2022</i></h5>
+                            <h3>Teller II</h3>
+                            <h4>East Texas Professional Credit Union</h4>
+                            <h6><i>June 2018 - Sept. 2022</i></h6>
                             <ul>
                                 <li>Maintained 99% accuracy in high-volume transactions.</li>
                                 <li>Safeguarded a perfect record of vault security for over 3 years, ensuring the
@@ -242,11 +245,12 @@
                 <div id="education-carousel" class="carousel">
                     <div class="slides">
                         <div class="slide">
-                            <h4>Bachelor of Science in Computer Science | Stephen F. Austin State University</h4>
-                            <h5><i>Aug. 2018 - May 2022</i></h5>
+                            <h3>Bachelor of Science in Computer Science</h3>
+                            <h4>Stephen F. Austin State University</h4>
+                            <h6><i>Aug. 2018 - May 2022</i></h6>
                             <ul>
                                 <li>Proficient in Java programming language, with experience building applications in group and solo settings. Gained additional exposure to Python, Visual Basic, HTML and more.</li>
-                                <li>Named to Dean's List for outstanding academic achievement in Spring 2019 and Spring 2020</li>
+                                <li>Named to Dean's List for outstanding academic achievement in Spring 2019 and Spring 2020.</li>
                             </ul>
                         </div>
                     </div>
@@ -261,8 +265,9 @@
                 <div id="certifications-carousel" class="carousel">
                     <div class="slides">
                         <div class="slide">
-                            <h4>Oracle Certified Associate, Java SE 8 Programmer | Oracle</h4>
-                            <h5><i>Issued May 2024</i></h5>
+                            <h3>Oracle Certified Associate, Java SE 8 Programmer</h3>
+                            <h4>Oracle</h4>
+                            <h6><i>Issued May 2024</i></h6>
                             <a href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=FAC6EFC67FD2FF57629F21E1AEDF6B072C32C4E27CA85638FEAC302210B70F71"
                                 target="_blank"><img src="images/OCAJSE8.jpg"
                                     alt="Oracle Certified Associate, Java SE 8 Programmer"
