--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6J4NRL7D4J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6J4NRL7D4J');
+</script>
+
 <body>
     <main>
         <div class="flex-container">
