Adds GitHub certification
Adds GitHub Foundations certification to the certification section.

Also updates the style to be more consistent for certification badges.

--- a/index.html
+++ b/index.html
@@ -268,11 +268,25 @@
                             <h3>Oracle Certified Associate, Java SE 8 Programmer</h3>
                             <h4>Oracle</h4>
                             <h6><i>Issued May 2024</i></h6>
-                            <a href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=FAC6EFC67FD2FF57629F21E1AEDF6B072C32C4E27CA85638FEAC302210B70F71"
-                                target="_blank"><img src="images/OCAJSE8.jpg"
-                                    alt="Oracle Certified Associate, Java SE 8 Programmer"
-                                    title="Oracle Certified Associate, Java SE 8 Programmer" id="ocajse8-badge"
-                                    class=""></a>
+                            <div class="certificate-badge-container">
+                                <a href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=FAC6EFC67FD2FF57629F21E1AEDF6B072C32C4E27CA85638FEAC302210B70F71"
+                                    target="_blank"><img src="images/OCAJSE8.jpg"
+                                        alt="Oracle Certified Associate, Java SE 8 Programmer"
+                                        title="Oracle Certified Associate, Java SE 8 Programmer" id="ocajse8-badge"
+                                        class="certificate-badge"></a>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <h3>GitHub Foundations</h3>
+                            <h4>GitHub</h4>
+                            <h6><i>Issued Jul. 2024</i></h6>
+                            <div class="certificate-badge-container">
+                                <a href="https://www.credly.com/badges/b92fd9ce-6e6b-45c9-a3e1-8f917f57792f/public_url"
+                                    target="_blank"><img src="images/github-foundations.png" 
+                                        alt="GitHub Foundations Badge"
+                                        title="GitHub Foundations Badge" id="github-foundations-badge"
+                                        class="certificate-badge"></a>
+                            </div>
                         </div>
                     </div>
                     <a class="carousel-prev" onclick="changeSlide('certifications-carousel', -1)">&#10094;</a>
