Update professional summary

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
             <fieldset id="section-summary" class="section-container half-width">
                 <legend class="section-title">Summary</legend>
                 <div>
-                    <p>I am a passionate software developer driven to build powerful tools that improve people's lives.
-                        I take pride in the quality of my work, enjoy solving complex problems, and thrive in dynamic
-                        environments.<br><br>
+                    <p>A dedicated software developer with a passion for crafting innovative solutions. I thrive in
+                        dynamic environments, solving complex problems with a keen eye for detail. Beyond my
+                        professional pursuits, I find joy in exploring the world of home espresso and immersing myself
+                        in the digital realm of gaming.<br><br>
                         My experience during my college career at Stephen F. Austin State University ignited my passion
                         for software development. In my current role at East Texas Professional Credit Union, I have 2
                         years of experience building software solutions using Java and various other technologies like
@@ -249,8 +250,11 @@
                             <h4>Stephen F. Austin State University</h4>
                             <h6><i>Aug. 2018 - May 2022</i></h6>
                             <ul>
-                                <li>Proficient in Java programming language, with experience building applications in group and solo settings. Gained additional exposure to Python, Visual Basic, HTML and more.</li>
-                                <li>Named to Dean's List for outstanding academic achievement in Spring 2019 and Spring 2020.</li>
+                                <li>Proficient in Java programming language, with experience building applications in
+                                    group and solo settings. Gained additional exposure to Python, Visual Basic, HTML
+                                    and more.</li>
+                                <li>Named to Dean's List for outstanding academic achievement in Spring 2019 and Spring
+                                    2020.</li>
                             </ul>
                         </div>
                     </div>
@@ -282,10 +286,9 @@
                             <h6><i>Issued Jul. 2024</i></h6>
                             <div class="certificate-badge-container">
                                 <a href="https://www.credly.com/badges/b92fd9ce-6e6b-45c9-a3e1-8f917f57792f/public_url"
-                                    target="_blank"><img src="images/github-foundations.png" 
-                                        alt="GitHub Foundations Badge"
-                                        title="GitHub Foundations Badge" id="github-foundations-badge"
-                                        class="certificate-badge"></a>
+                                    target="_blank"><img src="images/github-foundations.png"
+                                        alt="GitHub Foundations Badge" title="GitHub Foundations Badge"
+                                        id="github-foundations-badge" class="certificate-badge"></a>
                             </div>
                         </div>
                     </div>
