Add Space Snake project

--- a/index.html
+++ b/index.html
@@ -62,6 +62,21 @@
                         <div class="slide">
                             <div class="project-slide-content">
                                 <div class="project-text-container">
+                                    <h3>Space Snake: Classic Arcade Game</h3>
+                                    <h6><i>Jun. 2024 - Sep. 2024</i></h6>
+                                    <p>Embarked on a learning journey to develop a classic Snake game using the Unity Game Engine and C#. This project served as an introduction to game development, allowing me to explore fundamental programming concepts and Unity's core features.</p>
+                                    <p>You can view the <a href="https://github.com/cainfe/space-snake" target="_blank">source code on GitHub</a> here or download and play it now on <a href="https://floyd-cain.itch.io/space-snake" target="_blank">itch.io</a>.</p>
+                                </div>
+                                <div class="project-image-container">
+                                    <iframe frameborder="0" src="https://itch.io/embed/2959820?bg_color=222222&amp;fg_color=eeeeee&amp;link_color=66FF66&amp;border_color=363636" width="552" height="167"><a href="https://floyd-cain.itch.io/space-snake">Space Snake by Floyd Cain</a></iframe>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slides">
+                        <div class="slide">
+                            <div class="project-slide-content">
+                                <div class="project-text-container">
                                     <h3>TradeNote: Candlestick Charts with Entry/Exit Notations</h3>
                                     <h6><i>Feb. 2024 - Mar. 2024</i></h6>
                                     <p>Contributed a major feature to the open-source project <a
@@ -302,9 +317,6 @@
 
 
     <footer>
-        <p>
-            This page is hosted with Github Pages.
-        </p>
     </footer>
 
     <div id="zoom-modal" class="modal">
