Fix widget on small screens
Fix issue where space snake widget causes it's container to expand beyond small screens.

--- a/index.html
+++ b/index.html
@@ -65,15 +65,13 @@
                                     <h3>Space Snake: Classic Arcade Game</h3>
                                     <h6><i>Jun. 2024 - Sep. 2024</i></h6>
                                     <p>Embarked on a learning journey to develop a classic Snake game using the Unity Game Engine and C#. This project served as an introduction to game development, allowing me to explore fundamental programming concepts and Unity's core features.</p>
-                                    <p>You can view the <a href="https://github.com/cainfe/space-snake" target="_blank">source code on GitHub</a> here or download and play it now on <a href="https://floyd-cain.itch.io/space-snake" target="_blank">itch.io</a>.</p>
+                                    <p>You can view the source code on GitHub <a href="https://github.com/cainfe/space-snake" target="_blank">here</a> or download and play it now on <a href="https://floyd-cain.itch.io/space-snake" target="_blank">itch.io</a>.</p>
                                 </div>
                                 <div class="project-image-container">
-                                    <iframe frameborder="0" src="https://itch.io/embed/2959820?bg_color=222222&amp;fg_color=eeeeee&amp;link_color=66FF66&amp;border_color=363636" width="552" height="167"><a href="https://floyd-cain.itch.io/space-snake">Space Snake by Floyd Cain</a></iframe>
+                                    <iframe id="space-snake-widget" frameborder="0" src="https://itch.io/embed/2959820?bg_color=222222&amp;fg_color=eeeeee&amp;link_color=66FF66&amp;border_color=363636" width="552" height="167"><a href="https://floyd-cain.itch.io/space-snake">Space Snake by Floyd Cain</a></iframe>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="slides">
                         <div class="slide">
                             <div class="project-slide-content">
                                 <div class="project-text-container">
